[HREFORM-271] fixed the mobile expand/collapse design

--- a/src/main/webapp/bundles/health_v4/less/moreinfo/moreInfo.less
+++ b/src/main/webapp/bundles/health_v4/less/moreinfo/moreInfo.less
@@ -551,12 +551,14 @@
   }
 
   .row-eq-height {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @media(@sm) {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
   }
 
   .leftAlignedLink {
@@ -917,4 +919,8 @@ body[data-is-single="true"] {
       }
     }
   }
+}
+
+.no-padding {
+  padding: 0;
 }
